--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,8 @@
     ],
     "no-unexpected-multiline": 2,
     "spaced-comment": 0,
+    "linebreak-style": 0,
+    "react/jsx-one-expression-per-line": 0,
     "react/jsx-filename-extension": [
       1,
       {
