Files from laptop

--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,9 @@
     "spaced-comment": 0,
     "linebreak-style": 0,
     "react/jsx-one-expression-per-line": 0,
+    "jsx-a11y/label-has-for": 0,
+    "jsx-a11y/label-has-associated-control": 0,
+    "no-bitwise": "off",
     "react/jsx-filename-extension": [
       1,
       {
