--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@babel/core": "7.1.0",
     "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@svgr/webpack": "2.4.1",
+    "axios": "^0.18.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "9.0.0",
     "babel-jest": "23.6.0",
@@ -50,6 +51,7 @@
     "redux-logger": "^3.0.6",
     "resolve": "1.8.1",
     "sass-loader": "7.1.0",
+    "socket.io-client": "^2.1.1",
     "style-loader": "0.23.0",
     "terser-webpack-plugin": "1.1.0",
     "url-loader": "1.1.1",
